项目清理与文档完善 v2.0.0 - 删除测试文件和临时目录 (debug_tests/, tasks/, test_*.py等) - 新增系统架构与功能说明文档（含流程图、状态机规则） - 更新README.md，反映最新项目结构和功能 - 更新美术人员使用指南，增加自动化系统说明 - 完善.gitignore，排除测试文件和本地运行时数据

--- a/docs/美术人员使用指南.md
+++ b/docs/美术人员使用指南.md
@@ -301,4 +301,45 @@ cmds.commandPort(name=':7001', sourceType='python', echoOutput=False)
 
 ---
 
-*文档版本: 1.0.0 | 最后更新: 2026-02-13*
+---
+
+## 🤖 自动化任务
+
+工具管理器支持自动化执行，可以设置定时任务、间隔循环、文件监控等。
+
+### 创建自动化任务
+
+1. 菜单 → **自动化** → **任务管理...**
+2. 点击 **"创建新任务"**
+3. 填写任务信息：
+   - **任务名称**：描述性名称
+   - **选择工具**：要执行的工具
+   - **触发器类型**：选择触发方式
+
+### 触发器类型说明
+
+| 类型 | 说明 | 适用场景 |
+|------|------|----------|
+| ⏰ 定时触发 | 每天/每周固定时间执行 | 每日资产检查 |
+| 🔄 间隔触发 | 每隔一段时间执行 | 定期备份 |
+| 📁 文件监控 | 文件变化时执行 | 自动导入新资产 |
+| 🔗 任务链 | 上一任务完成后执行 | 流程自动化 |
+
+### 任务状态图标
+
+| 图标 | 状态 | 说明 |
+|------|------|------|
+| ⏳ | 等待中 | 任务已启用，等待触发 |
+| ▶️ | 运行中 | 正在执行 |
+| ✅ | 已完成 | 执行成功 |
+| ⏸️ | 已暂停 | 任务被禁用 |
+| ❌ | 错误 | 执行失败 |
+
+### 启用/禁用自动化
+
+- 菜单 → **自动化** → **启用自动化调度**
+- 勾选表示启用，取消勾选表示暂停所有调度
+
+---
+
+*文档版本: 2.0.0 | 最后更新: 2026-02-16*
